--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
   <hr> 
 
   <div class="buttons-container">
-    <button mat-flat-button style="background: '#c5f48b';" (click)="onOpenCfarContractDialog()">Open CFAR Contract dialog</button>
+    <button mat-flat-button color="primary" (click)="onOpenCfarContractDialog()">Open CFAR Contract dialog</button>
     <button mat-flat-button color="primary" (click)="onOpenCfarExerciseDialog()">Open CFAR Exercise dialog</button>
   </div>
 
