--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 
   <hopper-event-button></hopper-event-button>
 
-  <hr> 
+  <hr>
 
   <div class="buttons-container">
     <button mat-flat-button color="primary" (click)="onOpenCfarContractDialog()">Open CFAR Contract dialog</button>
@@ -25,7 +25,9 @@
   <div class="cfar-contract-choice-container">
     <h3>CFAR contract choice</h3>
   
-    <hopper-cfar-contract-choice></hopper-cfar-contract-choice>
+    <div class="hopper-theme-blue">
+      <hopper-cfar-contract-choice></hopper-cfar-contract-choice>
+    </div>
   </div>
 
 </div>
