Clean API + API integration

--- a/projects/fintech/src/components/cfar-contract-dialog/cfar-contract-dialog.component.html
+++ b/projects/fintech/src/components/cfar-contract-dialog/cfar-contract-dialog.component.html
@@ -22,19 +22,19 @@
 
         <div fxFlex="100" class="p-16" *ngFor="let rule of rules" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
             <mat-icon class="fat-icon">check</mat-icon>
-            <span>{{ rule }}</span>
+            <span>[ {{ rule }} ]</span>
         </div>
     
     </div>
 
     <div class="px-32" ngClass.lt-md="px-16" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutAlign="center center">
 
-        <mat-card class="m-16" fxFlex fxLayout="row wrap" *ngFor="let offer of offers" 
-            [ngClass]="{ 'active': offer == selectedOffer }"
-            [ngClass.lt-md]="{ 'active': offer == selectedOffer, 'full-width': true }">
+        <mat-card class="m-16" fxFlex fxLayout="row wrap" *ngFor="let offer of cfarOffers" 
+            [ngClass]="{ 'active': offer == selectedCfarOffer }"
+            [ngClass.lt-md]="{ 'active': offer == selectedCfarOffer, 'full-width': true }">
             <div fxFlex="100" (click)="onSelectOffer(offer)">
-                <h3 class="offer-title">{{ offer?.title }}</h3>
-                <span class="price-per-traveler">$/traveler</span>
+                <h3 class="offer-title">{{ computePercentage(offer) | percent }} Flight cost covered</h3>
+                <span class="price">{{ offer?.premium | currency:offer?.currency:'symbol' }}</span>
             </div>
             <div fxFlex="100" fxLayoutAlign="end center">
                 <button mat-button color="primary" (click)="onViewDetails(offer)">View details</button>
@@ -49,7 +49,9 @@
 
     <div class="p-32" ngClass.lt-md="px-16" fxFlex="100" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutAlign="end center">
         <button mat-button color="primary" ngClass.lt-sm="full-width" (click)="onClose()">Decline Coverage</button>
-        <button mat-flat-button color="primary" ngClass.lt-sm="full-width" (click)="onSubmit()">Get XX% Coverage | $YY</button>
+        <button mat-flat-button color="primary" ngClass.lt-sm="full-width" (click)="onSubmit()">
+            Get {{ computePercentage(selectedCfarOffer) | percent }} Coverage | {{ selectedCfarOffer?.premium | currency:selectedCfarOffer?.currency:'symbol' }}
+        </button>
     </div>
   
 </mat-dialog-actions>
