--- a/projects/fintech/src/components/cfar-contract-dialog/cfar-contract-dialog.component.scss
+++ b/projects/fintech/src/components/cfar-contract-dialog/cfar-contract-dialog.component.scss
@@ -57,7 +57,7 @@
                     font-weight: bold;
                 }
 
-                .price-per-traveler {
+                .price {
                     font-style: bold;
                     color: map-get($fg-palette, "secondary-text")
                 }
