--- a/projects/fintech/src/components/cfar-contract-choice/cfar-contract-choice.component.html
+++ b/projects/fintech/src/components/cfar-contract-choice/cfar-contract-choice.component.html
@@ -1,6 +1,6 @@
 <div class="px-32" ngClass.lt-md="px-16" fxLayout="row" fxLayoutAlign="center center">
 
-    <mat-card class="m-16 pointer" fxFlex fxLayout="row wrap">
+    <mat-card class="m-16 pointer" fxFlex fxLayout="row wrap" *ngFor="let offer of cfarOffers">
 
         <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px">
             <div fxFlex="96px" fxFlex.lt-md="88px" fxFlex.lt-sm="48px" class="p-16" ngClass.lt-sm="px-0">
@@ -9,7 +9,7 @@
 
             <div fxFlex="calc(100% - 112px)" fxFlex.lt-md="calc(100% - 104px)" fxFlex.lt-sm="calc(100% - 48px)" 
                 fxLayout="row wrap" fxLayoutAlign="start center">
-                <h2 class="offer-title">Cancel your flight at any time, for any reason.</h2>
+                <h2 class="offer-title">[Cancel your flight at any time, for any reason.]</h2>
             </div>
         </div>
 
@@ -20,11 +20,11 @@
 
                 <div fxFlex="100" class="py-16" *ngFor="let rule of rules" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
                     <mat-icon class="fat-icon" color="primary">check</mat-icon>
-                    <span>{{ rule }}</span>
+                    <span>[{{ rule }}]</span>
                 </div>
         
                 <div fxFlex="100" fxLayoutAlign="end center">
-                    <button mat-stroked-button color="primary" (click)="onSubmit()">Add for {{ offer?.coverage }}</button>
+                    <button mat-stroked-button color="primary" (click)="onSubmit(offer)">Add for {{ offer?.premium | currency:offer?.currency:'symbol' }}</button>
                 </div>
     
             </div>
