--- a/projects/fintech/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.html
+++ b/projects/fintech/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.html
@@ -21,7 +21,7 @@
         </div>
 
         <div fxFlex="100">
-            <p>Cancel your booking free of charge until <b>{{ cancelDate | date: 'EEEE, MMMM d, y, h:mm:ss a z' }}</b></p>
+            <p>Cancel your booking free of charge until <b>{{ cfarContract?.expiryDateTime | date: 'EEEE, MMMM d, y, h:mm:ss a z' }}</b></p>
             <p>You'll receive a confirmation email and the trip status will be updated.</p>
         </div>
 
@@ -31,27 +31,39 @@
 
     <div class="p-32" ngClass.lt-md="px-16" fxLayout="row" fxLayoutAlign="start start">
         <div fxFlex fxLayout="column" fxLayoutAlign="center start">
-            <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" class="mb-16">
-                <mat-icon color="primary" class="rotate-90">flight</mat-icon>
-                <span class="subtitle">Toronto to New York</span>
-            </div>
+            
+            <ng-container *ngFor="let slice of cfarContract?.itinerary?.slices">
 
-            <div class="ml-32">
-                <p>MM/DD/YYYY</p>
-                <p>HH:MM - HH:MM</p>
-                <p>#REF</p>
-            </div>
+                <ng-container *ngFor="let segment of slice?.segments">
+                    
+                    <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" class="mb-16">
+                        <mat-icon color="primary" class="rotate-90">flight</mat-icon>
+                        <span class="subtitle">{{ segment?.originAirport }} to {{ segment?.destinationAirport }}</span>
+                    </div>
+        
+                    <div class="ml-32">
+                        <p>Departure : {{ segment?.departureDateTime | date: 'dd/MM/yyyy hh:mm' }}</p>
+                        <p>Arrival : {{ segment?.arrivalDateTime | date: 'dd/MM/yyyy hh:mm' }}</p>
+                        <p>Flight : {{ segment?.flightNumber }}</p>
+                    </div>
+
+                </ng-container>
+                
+            </ng-container>
+
         </div>
 
         <div fxFlex fxLayout="column" fxLayoutAlign="center start">
             <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" class="mb-16">
                 <mat-icon color="primary">person</mat-icon>
-                <span class="subtitle" *ngIf="passengers && passengers.length > 1">{{ passengers?.length }} passengers</span>
-                <span class="subtitle" *ngIf="passengers && passengers.length <= 1">{{ passengers?.length }} passenger</span>
+                <span class="subtitle" *ngIf="getNbPassengers(cfarContract.itinerary) <= 1">{{ getNbPassengers(cfarContract.itinerary) }} passenger</span>
+                <span class="subtitle" *ngIf="getNbPassengers(cfarContract.itinerary) > 1">{{ getNbPassengers(cfarContract.itinerary) }} passengers</span>
             </div>
 
             <div class="ml-32">
-                <p *ngFor="let passenger of passengers">{{ passenger?.firstName }} {{ passenger?.lastName }}</p>
+                <p *ngFor="let passenger of getMapPassengers(cfarContract.itinerary) | keyvalue">
+                    <b>{{ passenger?.key }}</b> : {{ passenger?.value }}
+                </p>
             </div>
         </div>
     </div>
@@ -64,19 +76,41 @@
             <mat-icon color="primary">monetization_on</mat-icon>
             <span class="subtitle">Choose your refund type</span>
         </div>
-
+        
         <div fxFlex="100" fxLayout="row wrap" fxLayoutAlign="center center" fxLayout.lt-md="column">
-            <mat-card class="m-16 pointer" fxFlex fxLayout="row wrap" *ngFor="let offer of offers" 
-                [ngClass]="{ 'active': offer == selectedOffer }"
-                [ngClass.lt-md]="{ 'active': offer == selectedOffer, 'full-width': true }"
-                (click)="onSelectOffer(offer)">
-                <div fxFlex="100">
-                    <h3 class="offer-title">{{ offer?.title }}</h3>
-                    <p>{{ offer?.description }}</p>
-                </div>
-            </mat-card>
-        </div>
 
+            <ng-container *ngIf="cfarContract?.contractExercise?.hopperRefundMethod">
+
+                <mat-card class="m-16 pointer" fxFlex fxLayout="row wrap"
+                    [ngClass]="{ 'active': isHopperRefund }"
+                    [ngClass.lt-md]="{ 'active': isHopperRefund, 'full-width': true }"
+                    (click)="onSelectRefundType('hopper')">
+                    <div fxFlex="100">
+                        <h3 class="offer-title">Hopper refund</h3>
+                        <p>Method : {{ cfarContract?.contractExercise?.hopperRefundMethod }}</p>
+                        <p>Amount : {{ cfarContract?.contractExercise?.hopperRefund }}</p>
+                    </div>
+                </mat-card>
+
+            </ng-container>
+
+            <ng-container *ngIf="cfarContract?.contractExercise?.airlineRefundMethod">
+
+                <mat-card class="m-16 pointer" fxFlex fxLayout="row wrap"
+                    [ngClass]="{ 'active': !isHopperRefund }"
+                    [ngClass.lt-md]="{ 'active': !isHopperRefund, 'full-width': true }"
+                    (click)="onSelectRefundType('airline')">
+                    <div fxFlex="100">
+                        <h3 class="offer-title">Airline refund</h3>
+                        <p>Method : {{ cfarContract?.contractExercise?.airlineRefundMethod }}</p>
+                        <p>Amount : {{ cfarContract?.contractExercise?.airlineRefundAllowance }}</p>
+                    </div>
+                </mat-card>
+
+            </ng-container>
+            
+        </div>
+    
     </div>
 
     <mat-divider></mat-divider>
@@ -90,7 +124,7 @@
 
         <mat-form-field fxFlex="100" appearance="outline">
             <mat-select>
-              <mat-option *ngFor="let refundMethod of refundMethods" [value]="refundMethod.value">
+              <mat-option *ngFor="let refundMethod of refundMethods" (change)="onSelectRefundMethod(refundMethod)" [value]="refundMethod.value">
                 {{ refundMethod?.label }}
               </mat-option>
             </mat-select>
