--- a/src/app/app.theme.scss
+++ b/src/app/app.theme.scss
@@ -25,7 +25,7 @@
         .app-container {
             background-color: map-get($bg-palette, background);
             color: map-get($fg-palette, text);
-            height: 100%;
+            height: 100vh;
 
             .buttons-container {
                 padding: 16px;
