--- a/projects/fintech/src/components/cfar-contract-dialog/cfar-contract-dialog.component.scss
+++ b/projects/fintech/src/components/cfar-contract-dialog/cfar-contract-dialog.component.scss
@@ -38,6 +38,8 @@
         }
 
         .mat-dialog-content {
+            background-color: map-get($bg-palette, background);
+
             .fat-icon {
                 font-weight: 700;
             }
@@ -50,7 +52,7 @@
                 }
 
                 &.active {
-                    border: 2px solid map-get($accent-palette, default);
+                    border: 2px solid map-get($primary-palette, default);
                 }
 
                 .offer-title {
@@ -64,15 +66,13 @@
             }
         }
 
-        .mat-dialog-actions .mat-button-base+.mat-button-base,
-        .mat-dialog-actions .mat-mdc-button-base+.mat-mdc-button-base {
-            margin: 0px;
-        }
+        .mat-dialog-actions {
+            background-color: map-get($bg-palette, background);
 
-        @if ($is-dark) {
-
-        } @else {
-            
+            .mat-button-base+.mat-button-base,
+            .mat-mdc-button-base+.mat-mdc-button-base {
+                margin: 0px;
+            }
         }
     }
 }
