--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,8 +15,8 @@ $light-primary-text: white;
 // COMPONENT THEMING
 // ------------------------------------------
 
-// Fintech Lib
-@import "../projects/fintech/src/styles/theme.scss";
+// cloud-airlines-angular-sdk Lib
+@import "../projects/cloud-airlines-angular-sdk/src/styles/theme.scss";
 
 // My App Component
 @import "./app/app.theme.scss";
