--- a/projects/cloud-airlines-angular-sdk/src/components/cfar-contract-choice/cfar-contract-choice.component.html
+++ b/projects/cloud-airlines-angular-sdk/src/components/cfar-contract-choice/cfar-contract-choice.component.html
@@ -9,7 +9,7 @@
 
             <div fxFlex="calc(100% - 112px)" fxFlex.lt-md="calc(100% - 104px)" fxFlex.lt-sm="calc(100% - 48px)" 
                 fxLayout="row wrap" fxLayoutAlign="start center">
-                <h2 class="offer-title">[Cancel your flight at any time, for any reason.]</h2>
+                <h2 class="offer-title">{{ 'CFAR_CONTRACT_CHOICE.TITLE' | translate }}</h2>
             </div>
         </div>
 
@@ -24,7 +24,9 @@
                 </div>
         
                 <div fxFlex="100" fxLayoutAlign="end center">
-                    <button mat-stroked-button color="primary" (click)="onSubmit(offer)">Add for {{ offer?.premium | currency:offer?.currency:'symbol' }}</button>
+                    <button mat-stroked-button color="primary" (click)="onSubmit(offer)">
+                        {{ 'CFAR_CONTRACT_CHOICE.PRICE' | translate: { price : (offer?.premium | currency:offer?.currency:'symbol':undefined:currentLang) } }}
+                    </button>
                 </div>
     
             </div>
