--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,29 @@
 
   <p>
     <mat-toolbar class="mat-elevation-z6" color="primary" fxLayout="row" fxLayoutAlign="space-between center">
-      <span>Hopper Application</span>
+      
+      <div fxLayout="row" fxLayoutAlign="start center">
+        <span>Hopper Application</span>
+      </div>
 
-      <button mat-icon-button (click)="switchThemeMode()">
-        <mat-icon mat-icon-button *ngIf="!isDarkMode()">dark_mode</mat-icon>
-        <mat-icon mat-icon-button *ngIf="isDarkMode()">light_mode</mat-icon>
-      </button>
+      <div fxLayout="row" fxLayoutAlign="end center">
+        <button mat-icon-button (click)="onSwitchThemeMode()">
+          <mat-icon mat-icon-button *ngIf="!isDarkMode()">dark_mode</mat-icon>
+          <mat-icon mat-icon-button *ngIf="isDarkMode()">light_mode</mat-icon>
+        </button>
+  
+        <button mat-button [matMenuTriggerFor]="menu">
+          <mat-icon class="mr-8" svgIcon="flag_{{ currentLang }}"></mat-icon>
+          <span>{{ currentLang | uppercase }}</span>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item *ngFor="let language of languages" (click)="onSetCurrentLang(language)">
+            <mat-icon svgIcon="flag_{{ language }}"></mat-icon>
+            <span>{{ language | uppercase }}</span>
+          </button>
+        </mat-menu>
+      </div>
+
     </mat-toolbar>
   </p>
 
@@ -26,7 +43,7 @@
     <h3>CFAR contract choice</h3>
   
     <div class="hopper-theme-blue">
-      <hopper-cfar-contract-choice></hopper-cfar-contract-choice>
+      <hopper-cfar-contract-choice [currentLang]="currentLang"></hopper-cfar-contract-choice>
     </div>
   </div>
 
