--- a/projects/cloud-airlines-angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.html
+++ b/projects/cloud-airlines-angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.html
@@ -1,9 +1,9 @@
-<div mat-dialog-title class="p-32" ngClass.lt-md="px-16" fxLayout="row wrap" fxLayout="start center">
+<div mat-dialog-title class="p-32" ngClass.lt-md="px-16" fxLayout="row" fxLayout="start center" fxLayoutGap="16px">
     
-    <div fxFlex="80" fxLayoutAlign="center start" fxLayout="column">
+    <div fxFlex="calc(80% - 16px)" fxLayoutAlign="center start" fxLayout="column">
         <h2 class="m-0">{{ 'CFAR_EXERCISE_DIALOG.TITLE' | translate }}</h2>
     </div>
-    <div fxFlex="20" fxLayoutAlign="end start">
+    <div fxFlex="calc(20% - 16px)" fxLayoutAlign="end start">
         <button mat-mini-fab matTooltip="Close" (click)="onClose()">
             <mat-icon>clear</mat-icon>
         </button>
@@ -13,170 +13,189 @@
 
 <mat-dialog-content class="mat-typography">
   
-    <div class="p-32" ngClass.lt-md="px-16" fxLayout="row wrap" fxLayoutAlign="start center">
+    <ng-container *ngIf="!isLoading">
+
+        <ng-container *ngIf="cfarContract">
+            <div class="p-32" ngClass.lt-md="px-16" fxLayout="row wrap" fxLayoutAlign="start center">
         
-        <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" class="mb-16">
-            <mat-icon color="primary">cached</mat-icon>
-            <span class="title">{{ 'CFAR_EXERCISE_DIALOG.SUBTITLE' | translate }}</span>
-        </div>
-
-        <div fxFlex="100">
-            <p>
-                {{ 'CFAR_EXERCISE_DIALOG.DEADLINE_SENTENCE_1' | translate }}
-                <b>{{ cfarContract?.expiryDateTime | date: ('COMMON.DATE_FORMAT' | translate):'':currentLang }}</b>
-            </p>
-            <p>{{ 'CFAR_EXERCISE_DIALOG.DEADLINE_SENTENCE_2' | translate }}</p>
-        </div>
-
-    </div>
-
-    <mat-divider></mat-divider>
-
-    <div class="p-32" ngClass.lt-md="px-16" fxLayout="row" fxLayoutAlign="start start">
-        <div fxFlex fxLayout="column" fxLayoutAlign="center start">
-            
-            <ng-container *ngFor="let slice of cfarContract?.itinerary?.slices">
-
-                <ng-container *ngFor="let segment of slice?.segments">
+                <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" class="mb-16">
+                    <mat-icon color="primary">cached</mat-icon>
+                    <span class="title">{{ 'CFAR_EXERCISE_DIALOG.SUBTITLE' | translate }}</span>
+                </div>
+        
+                <div fxFlex="100">
+                    <p>
+                        {{ 'CFAR_EXERCISE_DIALOG.DEADLINE_SENTENCE_1' | translate }}
+                        <b>{{ cfarContract?.expiryDateTime | date: ('COMMON.DATE_FORMAT' | translate):'':currentLang }}</b>
+                    </p>
+                    <p>{{ 'CFAR_EXERCISE_DIALOG.DEADLINE_SENTENCE_2' | translate }}</p>
+                </div>
+        
+            </div>
+        
+            <mat-divider></mat-divider>
+        
+            <div class="p-32" ngClass.lt-md="px-16" fxLayout="row" fxLayoutAlign="start start">
+                <div fxFlex fxLayout="column" fxLayoutAlign="center start">
                     
+                    <ng-container *ngFor="let slice of cfarContract?.itinerary?.slices">
+        
+                        <ng-container *ngFor="let segment of slice?.segments">
+                            
+                            <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" class="mb-16">
+                                <mat-icon color="primary" class="rotate-90">flight</mat-icon>
+                                <span class="subtitle">
+                                    {{ segment?.originAirport }}
+                                    {{ 'CFAR_EXERCISE_DIALOG.TO' | translate }}
+                                    {{ segment?.destinationAirport }}
+                                </span>
+                            </div>
+                
+                            <div class="ml-32">
+                                <p>
+                                    <b>{{ 'CFAR_EXERCISE_DIALOG.DEPARTURE' | translate }}</b>
+                                    {{ segment?.departureDateTime | date: ('COMMON.DATE_FORMAT_SHORT' | translate):'':currentLang }}
+                                </p>
+                                <p>
+                                    <b>{{ 'CFAR_EXERCISE_DIALOG.ARRIVAL' | translate }}</b>
+                                    {{ segment?.arrivalDateTime | date: ('COMMON.DATE_FORMAT_SHORT' | translate):'':currentLang }}
+                                </p>
+                                <p>
+                                    <b>{{ 'CFAR_EXERCISE_DIALOG.FLIGHT' | translate }}</b>
+                                    {{ segment?.flightNumber }}
+                                </p>
+                            </div>
+        
+                        </ng-container>
+                        
+                    </ng-container>
+        
+                </div>
+        
+                <div fxFlex fxLayout="column" fxLayoutAlign="center start">
                     <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" class="mb-16">
-                        <mat-icon color="primary" class="rotate-90">flight</mat-icon>
-                        <span class="subtitle">
-                            {{ segment?.originAirport }}
-                            {{ 'CFAR_EXERCISE_DIALOG.TO' | translate }}
-                            {{ segment?.destinationAirport }}
+                        <mat-icon color="primary">person</mat-icon>
+                        <span class="subtitle" *ngIf="getNbPassengers(cfarContract.itinerary) <= 1">
+                            {{ 'CFAR_EXERCISE_DIALOG.PASSENGER' | translate: {
+                                nbPassenger: getNbPassengers(cfarContract.itinerary) 
+                            } }}
+                        </span>
+                        <span class="subtitle" *ngIf="getNbPassengers(cfarContract.itinerary) > 1">
+                            {{ 'CFAR_EXERCISE_DIALOG.PASSENGERS' | translate: {
+                                nbPassenger: getNbPassengers(cfarContract.itinerary) 
+                            } }}
                         </span>
                     </div>
         
                     <div class="ml-32">
-                        <p>
-                            <b>{{ 'CFAR_EXERCISE_DIALOG.DEPARTURE' | translate }}</b>
-                            {{ segment?.departureDateTime | date: ('COMMON.DATE_FORMAT_SHORT' | translate):'':currentLang }}
-                        </p>
-                        <p>
-                            <b>{{ 'CFAR_EXERCISE_DIALOG.ARRIVAL' | translate }}</b>
-                            {{ segment?.arrivalDateTime | date: ('COMMON.DATE_FORMAT_SHORT' | translate):'':currentLang }}
-                        </p>
-                        <p>
-                            <b>{{ 'CFAR_EXERCISE_DIALOG.FLIGHT' | translate }}</b>
-                            {{ segment?.flightNumber }}
+                        <p *ngFor="let passenger of getMapPassengers(cfarContract.itinerary) | keyvalue">
+                            <b class="passenger-type">{{ passenger?.key }}</b> : {{ passenger?.value }}
                         </p>
                     </div>
-
-                </ng-container>
-                
-            </ng-container>
-
-        </div>
-
-        <div fxFlex fxLayout="column" fxLayoutAlign="center start">
-            <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" class="mb-16">
-                <mat-icon color="primary">person</mat-icon>
-                <span class="subtitle" *ngIf="getNbPassengers(cfarContract.itinerary) <= 1">
-                    {{ 'CFAR_EXERCISE_DIALOG.PASSENGER' | translate: {
-                        nbPassenger: getNbPassengers(cfarContract.itinerary) 
-                    } }}
-                </span>
-                <span class="subtitle" *ngIf="getNbPassengers(cfarContract.itinerary) > 1">
-                    {{ 'CFAR_EXERCISE_DIALOG.PASSENGERS' | translate: {
-                        nbPassenger: getNbPassengers(cfarContract.itinerary) 
-                    } }}
-                </span>
+                </div>
             </div>
-
-            <div class="ml-32">
-                <p *ngFor="let passenger of getMapPassengers(cfarContract.itinerary) | keyvalue">
-                    <b class="passenger-type">{{ passenger?.key }}</b> : {{ passenger?.value }}
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <mat-divider></mat-divider>
-
-    <div class="p-32" ngClass.lt-md="px-16" fxLayout="row wrap" fxLayoutAlign="center center">
-
-        <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" class="mb-16">
-            <mat-icon color="primary">monetization_on</mat-icon>
-            <span class="subtitle">{{ 'CFAR_EXERCISE_DIALOG.CHOOSE_REFUND_TYPE' | translate }}</span>
-        </div>
         
-        <div fxFlex="100" fxLayout="row wrap" fxLayoutAlign="center center" fxLayout.lt-md="column">
-
-            <ng-container *ngIf="cfarContract?.contractExercise?.hopperRefundMethod">
-
-                <mat-card class="m-16 pointer" fxFlex fxLayout="row wrap"
-                    [ngClass]="{ 'active': isHopperRefund }"
-                    [ngClass.lt-md]="{ 'active': isHopperRefund, 'full-width': true }"
-                    (click)="onSelectRefundType('hopper')">
-                    <div fxFlex="100">
-                        <h3 class="offer-title">{{ 'CFAR_EXERCISE_DIALOG.HOPPER_REFUND' | translate }}</h3>
-                        <p>
-                            {{ 'CFAR_EXERCISE_DIALOG.METHOD' | translate }}
-                            {{ cfarContract?.contractExercise?.hopperRefundMethod }}
-                        </p>
-                        <p>
-                            {{ 'CFAR_EXERCISE_DIALOG.AMOUNT' | translate }}
-                            {{ cfarContract?.contractExercise?.hopperRefund | currency:cfarContract?.contractExercise?.currency:'symbol':undefined:currentLang }}
-                        </p>
-                    </div>
-                </mat-card>
-
-            </ng-container>
-
-            <ng-container *ngIf="cfarContract?.contractExercise?.airlineRefundMethod">
-
-                <mat-card class="m-16 pointer" fxFlex fxLayout="row wrap"
-                    [ngClass]="{ 'active': !isHopperRefund }"
-                    [ngClass.lt-md]="{ 'active': !isHopperRefund, 'full-width': true }"
-                    (click)="onSelectRefundType('airline')">
-                    <div fxFlex="100">
-                        <h3 class="offer-title">{{ 'CFAR_EXERCISE_DIALOG.AIRLINE_REFUND' | translate }}</h3>
-                        <p>
-                            {{ 'CFAR_EXERCISE_DIALOG.METHOD' | translate }}
-                            {{ cfarContract?.contractExercise?.airlineRefundMethod }}
-                        </p>
-                        <p>
-                            {{ 'CFAR_EXERCISE_DIALOG.AMOUNT' | translate }}
-                            {{ cfarContract?.contractExercise?.airlineRefundAllowance | currency:cfarContract?.contractExercise?.currency:'symbol':undefined:currentLang }}
-                        </p>
-                    </div>
-                </mat-card>
-
-            </ng-container>
+            <mat-divider></mat-divider>
+        
+            <div class="p-32" ngClass.lt-md="px-16" fxLayout="row wrap" fxLayoutAlign="center center">
+        
+                <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" class="mb-16">
+                    <mat-icon color="primary">monetization_on</mat-icon>
+                    <span class="subtitle">{{ 'CFAR_EXERCISE_DIALOG.CHOOSE_REFUND_TYPE' | translate }}</span>
+                </div>
+                
+                <div fxFlex="100" fxLayout="row wrap" fxLayoutAlign="center center" fxLayout.lt-md="column">
+        
+                    <ng-container *ngIf="cfarContract?.contractExercise?.hopperRefundMethod">
+        
+                        <mat-card class="m-16 pointer" fxFlex fxLayout="row wrap"
+                            [ngClass]="{ 'active': isHopperRefund }"
+                            [ngClass.lt-md]="{ 'active': isHopperRefund, 'full-width': true }"
+                            (click)="onSelectRefundType('hopper')">
+                            <div fxFlex="100">
+                                <h3 class="offer-title">{{ 'CFAR_EXERCISE_DIALOG.HOPPER_REFUND' | translate }}</h3>
+                                <p>
+                                    {{ 'CFAR_EXERCISE_DIALOG.METHOD' | translate }}
+                                    {{ cfarContract?.contractExercise?.hopperRefundMethod }}
+                                </p>
+                                <p>
+                                    {{ 'CFAR_EXERCISE_DIALOG.AMOUNT' | translate }}
+                                    {{ cfarContract?.contractExercise?.hopperRefund | currency:cfarContract?.contractExercise?.currency:'symbol':undefined:currentLang }}
+                                </p>
+                            </div>
+                        </mat-card>
+        
+                    </ng-container>
+        
+                    <ng-container *ngIf="cfarContract?.contractExercise?.airlineRefundMethod">
+        
+                        <mat-card class="m-16 pointer" fxFlex fxLayout="row wrap"
+                            [ngClass]="{ 'active': !isHopperRefund }"
+                            [ngClass.lt-md]="{ 'active': !isHopperRefund, 'full-width': true }"
+                            (click)="onSelectRefundType('airline')">
+                            <div fxFlex="100">
+                                <h3 class="offer-title">{{ 'CFAR_EXERCISE_DIALOG.AIRLINE_REFUND' | translate }}</h3>
+                                <p>
+                                    {{ 'CFAR_EXERCISE_DIALOG.METHOD' | translate }}
+                                    {{ cfarContract?.contractExercise?.airlineRefundMethod }}
+                                </p>
+                                <p>
+                                    {{ 'CFAR_EXERCISE_DIALOG.AMOUNT' | translate }}
+                                    {{ cfarContract?.contractExercise?.airlineRefundAllowance | currency:cfarContract?.contractExercise?.currency:'symbol':undefined:currentLang }}
+                                </p>
+                            </div>
+                        </mat-card>
+        
+                    </ng-container>
+                    
+                </div>
             
+            </div>
+        
+            <mat-divider></mat-divider>
+        
+            <div class="p-32" ngClass.lt-md="px-16" fxLayout="row wrap" fxLayoutAlign="center center">
+        
+                <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" class="mb-16">
+                    <mat-icon color="primary">credit_card</mat-icon>
+                    <span class="subtitle">{{ 'CFAR_EXERCISE_DIALOG.REFUND_METHOD' | translate }}</span>
+                </div>
+        
+                <mat-form-field fxFlex="100" appearance="outline">
+                    <mat-select>
+                      <mat-option *ngFor="let refundMethod of refundMethods" (change)="onSelectRefundMethod(refundMethod)" [value]="refundMethod.value">
+                        {{ refundMethod?.label }}
+                      </mat-option>
+                    </mat-select>
+                </mat-form-field>
+        
+            </div>
+        </ng-container>
+
+       <ng-container *ngIf="!cfarContract">
+            <div class="p-32" ngClass.lt-md="px-16" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px">
+                <p>{{ 'CFAR_EXERCISE_DIALOG.NO_CONTRACT' | translate }}</p>
+            </div>
+       </ng-container>
+
+    </ng-container>
+
+    <ng-container *ngIf="isLoading">
+        <div class="p-32" ngClass.lt-md="px-16" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px">
+            <mat-spinner></mat-spinner>
+            <p>{{ 'CFAR_EXERCISE_DIALOG.LOADING' | translate }}</p>
         </div>
-    
-    </div>
-
-    <mat-divider></mat-divider>
-
-    <div class="p-32" ngClass.lt-md="px-16" fxLayout="row wrap" fxLayoutAlign="center center">
-
-        <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" class="mb-16">
-            <mat-icon color="primary">credit_card</mat-icon>
-            <span class="subtitle">{{ 'CFAR_EXERCISE_DIALOG.REFUND_METHOD' | translate }}</span>
-        </div>
-
-        <mat-form-field fxFlex="100" appearance="outline">
-            <mat-select>
-              <mat-option *ngFor="let refundMethod of refundMethods" (change)="onSelectRefundMethod(refundMethod)" [value]="refundMethod.value">
-                {{ refundMethod?.label }}
-              </mat-option>
-            </mat-select>
-        </mat-form-field>
-
-    </div>
+    </ng-container>
     
 </mat-dialog-content>
 
 <mat-dialog-actions>
 
     <div class="p-32" ngClass.lt-md="px-16" fxFlex="100" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutAlign="end center">
-        <button mat-button color="primary" ngClass.lt-sm="full-width" (click)="onClose()">
+        <button mat-button color="primary" ngClass.lt-sm="full-width" (click)="onClose()" [disabled]="isLoading">
             {{ 'CFAR_EXERCISE_DIALOG.BUTTON.CANCEL' | translate }}
         </button>
-        <button mat-flat-button color="primary" ngClass.lt-sm="full-width" (click)="onSubmit()">
+        <button mat-flat-button color="primary" ngClass.lt-sm="full-width" (click)="onSubmit()" [disabled]="isLoading">
             {{ 'CFAR_EXERCISE_DIALOG.BUTTON.SUBMIT' | translate }}
         </button>
     </div>
